--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,13 @@
 }
 .table-row {
     display: flex;
-    line-height: 24px;
+    line-height: 36px;
     white-space: nowrap;
     margin: 10px 0;
     padding: 10px;
     background: #ffffff;
     border: 1px solid #e3e3e3;
+    border-radius: 1px;
 }
 .table-header > span {
     overflow: hidden;
@@ -37,6 +38,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
     padding: 0 5px;
+    vertical-align: middle;
+}
+.table-row > span > a {
+    vertical-align: middle;
 }
 .button-inline {
     border-width: 0;
